nivasa-macros/tests/trybuild/validation_max_length_invalid.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct ProfileForm {
    #[max_length]
    bio: String,
}

fn main() {}
